Tables inside Markdown are formatted as Bootstrap tables (and "align" attributes not overridden by Bootstrap) - We now use <article> tags for the Markdown content instead of just a <div>. This will make a possible <h1> heading inside the content structurally correct.

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -279,3 +279,19 @@ $notAnyGridBreakpoint: '';
         }
     }
 }
+
+// <article> (usually we use them for Markdown rendering) will automatically opt-in into Bootstrap's tables
+article table {
+    @extend .table, .table-responsive, .table-hover;
+
+    // Marked by default renders "align" attributes on the cells. Use them.
+    th[align=left], td[align=left] {
+        @extend .text-start;
+    }
+    th[align=center], td[align=center] {
+        @extend .text-center;
+    }
+    th[align=right], td[align=right] {
+        @extend .text-end;
+    }
+}
